# auto_remove

./: Cargo.toml  README.md
src/: main.rs
src/linux/: lib.rs  mod.rs
src/windows/: lib.rs
